data base without persisstence

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -12,15 +12,17 @@ services:
       - WATCHPACK_POLLING=true
       - API_URL=http://api:8080
   database:
-    container_name: springular-app-database
-    image: mysql:5.7
+    image: mysql:latest
+    restart: always
+    environment:
+      MYSQL_DATABASE: ${MYSQL_DATABASE}
+      MYSQL_USER: ${MYSQL_USER}
+      MYSQL_PASSWORD: ${MYSQL_PASSWORD}
+      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
     ports:
       - "3306:3306"
-    environment:
-      - MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD}
-      - MYSQL_DATABASE=${MYSQL_DATABASE}
-      - MYSQL_USER=${MYSQL_USER}
-      - MYSQL_PASSWORD=${MYSQL_PASSWORD}
+    volumes:
+      - db_data:/var/lib/mysql
   api:
     container_name: springular-app-api
     build:
@@ -30,3 +32,6 @@ services:
       - "8080:8080"
     environment:
       - SPRING_PROFILES_ACTIVE=docker
+
+volumes:
+  db_data:
