--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 spring.application.name=azure-basic-app
+
+# MySQL datasource configuration for Docker
+spring.datasource.url=jdbc:mysql://database:3306/db
+spring.datasource.username=root
+spring.datasource.password=root
+
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+spring.jpa.show-sql=false
+spring.jpa.hibernate.ddl-auto=create
+
