--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,6 +8,8 @@ services:
       - "4200:4200"
     depends_on:
       - api
+    volumes:
+      - ./frontend/src:/srv/src/
     environment:
       - WATCHPACK_POLLING=true
       - API_URL=http://api:8080
