--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "frontend",
+  "name": "angular-app",
   "version": "0.0.0",
   "scripts": {
+    "dev": "ng serve --host 0.0.0.0",
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test",
-    "dev": "ng serve --host 0.0.0.0"
+    "test": "ng test"
   },
   "prettier": {
     "printWidth": 100,
@@ -29,7 +29,11 @@
     "@angular/forms": "^20.2.0",
     "@angular/platform-browser": "^20.2.0",
     "@angular/router": "^20.2.0",
+    "@tailwindcss/postcss": "^4.1.12",
+    "ng-zorro-antd": "^20.1.3",
+    "postcss": "^8.5.6",
     "rxjs": "~7.8.0",
+    "tailwindcss": "^4.1.12",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
