--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "angular-app",
+  "name": "my-project",
   "version": "0.0.0",
   "scripts": {
-    "dev": "ng serve --host 0.0.0.0",
     "ng": "ng",
     "start": "ng serve",
+    "dev": "ng serve --port 4200 --host 0.0.0.0",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
@@ -30,7 +30,6 @@
     "@angular/platform-browser": "^20.2.0",
     "@angular/router": "^20.2.0",
     "@tailwindcss/postcss": "^4.1.12",
-    "ng-zorro-antd": "^20.1.3",
     "postcss": "^8.5.6",
     "rxjs": "~7.8.0",
     "tailwindcss": "^4.1.12",
@@ -38,8 +37,8 @@
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
-    "@angular/build": "^20.2.0",
-    "@angular/cli": "^20.2.0",
+    "@angular/build": "^20.2.1",
+    "@angular/cli": "^20.2.1",
     "@angular/compiler-cli": "^20.2.0",
     "@types/jasmine": "~5.1.0",
     "jasmine-core": "~5.9.0",
